Fix spacing on Contact nav bar

--- a/css/contact.css
+++ b/css/contact.css
@@ -35,10 +35,6 @@ p {
   text-align: center;
 }
 
-a {
-  padding: 1rem;
-}
-
 ul {
   list-style: none;
   padding: 0;
